Related: tdf#117245 editeng: cover tab stop items for sw doc model xml ...

... dump purposes

Change-Id: Ib6c7dff9f2e76c3358dbdc06d2ba53fa2601c043